# YT-Dynamic-OPML

./: .dockerignore  .gitignore  Dockerfile  README.md  bookmarklet  docker-compose.yml  example.opml.xml  main.py  pyproject.toml  requirements.txt
.github/workflows/: gh-release-on-version-change.yml  ghcr-publish.yml
src/: create_opml.py  logger.py  main.py  serve_opml.py  server.py  test_youtube.py  youtube.py
tests/: test_youtube.py
