[project]
name = "yt-dynamic-opml"
version = "1.2"
description = "FastAPI app that provides an endpoint to generate an OPML file of a given channel's youtube subscriptions."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apprise>=1.9.2",
    "fastapi>=0.115.8",
    "google-api-python-client>=2.162.0",
    "google-auth>=2.38.0",
    "google-auth-oauthlib>=1.2.1",
    "oauth2client>=4.1.3",
    "python-dotenv>=1.0.1",
    "uvicorn>=0.34.0",
]
